// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFieldFancy component Props Creates with options 1`] = `
<div>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-expanded={false}
    autoComplete="off"
    id="r"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    role="combobox"
    value=""
  />
</div>
`;

exports[`SelectFieldFancy component Props Creates with options and value 1`] = `
<div>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-expanded={false}
    autoComplete="off"
    id="r"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    role="combobox"
    value="1"
  />
</div>
`;

exports[`SelectFieldFancy component Props Creates with out options or value 1`] = `
<div>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-expanded={false}
    autoComplete="off"
    id="r"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    role="combobox"
    value=""
  />
</div>
`;
